<resources>

    <!-- About us Activity -->
    <string name="menu_action_about_us_text">About us</string>
    <string name="autores_text">Authors:</string>
    <string name="neiber_text">Neiber Padierna Perez</string>
    <string name="yefry_text">Yefry Alexis Calderon Yepes</string>
    <string name="couse_name_text">Course:</string>
    <string name="computacion_movil_text">Computación Movil</string>
    <string name="university_name_text">Universidad de Antioquia</string>
    <string name="medellin_text">Medellín</string>
    <string name="year_text">2014</string>
    
    <!-- Bluetooth Devices Activity -->
    <string name="bluetooth_devices_list_activity_title">Select a Bluetooth Device</string>
    <string name="start_scanning_text_button">Start Scanning</string>
    <string name="new_devices_text_view">Other Available Devices</string>
    <string name="no_available_devices_found">No Bluetooth Devices found</string>
    <string name="no_paired_devices_title">No Bluetooth Devices have been paired</string>
    <string name="paired_devices_text_view">Paired Devices</string>
    <string name="scanning_for_devices_title">Scanning for Devices&#8230;</string>
    <string name="select_device_title">Select a Device to connect</string>

    <!-- Bluetooth Multiplayer Activity -->
    <string name="bluetooth_multiplayer_activity_title">Bluetooth Multiplayer</string>
    <string name="menu_action_become_discoverable_text">Become Discoverable</string>
    <string name="player_one_text_button">Player #1</string>
    <string name="player_two_text_button">Player #2</string>
    <string name="selector_player_title_text_view">Please, select the role to use in the Hangman game:</string>
    <string name="no_enabled_bluetooth_message_alert_dialog">The Bluetooth was not enable for turning it on. Please, try it later.</string>
    <string name="no_enabled_bluetooth_title_alert_dialog">Bluetooth Was not Enable</string>
    <string name="no_available_bluetooth_message_alert_dialog">The system has not a hardware dedicated for supporting Bluetooth.</string>
    <string name="no_available_bluetooth_title_alert_dialog">No Available Bluetooth</string>

    <!-- Category Dashboard Activity -->
    <string name="category_dashboard_activity_label">Categories</string>
    <string name="cannot_load_categories_error_message_alert_dialog">The \"Categories\" loading for your selected language has not been successful completed.</string>
    <string name="cannot_load_categories_error_title_alert_dialog">Error Loading Categories</string>
    <string name="cannot_load_hangman_for_category_error_message_alert_dialog">The selection and loading for a \"Hangman Word\" have not been successful completed for the selected Category and Language.</string>
    <string name="cannot_load_hangman_for_category_error_title_alert_dialog">Error Loading Hangman Words</string>
    <string name="error_loading_categories">Categories could not be loaded</string>
    

    <!-- Global Strings Text -->
    <string name="application_name">AhorcaTooth</string>
    <string name="label_accept_button">Accept</string>
    <string name="label_cancel_button">Cancel</string>

    <!-- Hangman Bluetooth Support -->
    <string name="hangman_bluetooth_support_fail_connection_message">The connection with the Bluetooth Device was failed!!!</string>
    <string name="hangman_bluetooth_support_lost_connection_message">The connection with the Bluetooth Device was lost!!!</string>

    <!-- Hangman Board Activity -->
    <string name="back_button_pressed_message_alert_dialog">The \"Back Button\" was pressed. Do you really want leave this game?\n\nAll your progress will be discarted.</string>
    <string name="back_button_pressed_title_alert_dialog">Back Button Pressed</string>
    <string name="cannot_obtain_hangman_word_message_alert_dialog">The game can not get and load an \"Hangman Word\" for starting the new game.</string>
    <string name="cannot_obtain_hangman_word_title_alert_dialog">Error Getting a Hangman Word</string>
    <string name="hanging_process_content_description_image_view">Image for displaying the Hanging Process.</string>
    <string name="mask_char_for_words">-</string>
    <string name="score_title_text_view">Score:</string>
    <string name="time_title_text_view">Time:</string>

    <!-- Hangman Resume Activity -->
    <string name="final_score_title_text_view">Score:</string>
    <string name="final_time_title_text_view">Time:</string>
    <string name="lost_game_main_title_text_view">YOU LOST!!!</string>
    <string name="resume_game_content_description_image_view">Image View for displaying a result image game.</string>
    <string name="won_game_main_title_text_view">YOUT WON!!!</string>

    <!-- Keyboard Keys Text -->
    <string-array name="keyboard_keys_texts_array">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>Ñ</item>
        <item>O</item>
        <item>P</item>
        <item>Q</item>
        <item>R</item>
        <item>S</item>
        <item>T</item>
        <item>U</item>
        <item>V</item>
        <item>W</item>
        <item>X</item>
        <item>Y</item>
        <item>Z</item>
    </string-array>

    <!-- Main Activity -->
    <string name="logo_content_description_image_view">Image for logo\'s container.</string>
    <string name="menu_action_update_database_preference_text">Refresh</string>
    <string name="menu_action_web_service_preference_text">Web Service Settings</string>
    <string name="no_conection_message_title">No Internet Connection!!</string>
    <string name="no_conection_message">Please verify your internet connection</string>
    <string name="single_player_button">Single Player</string>
    <string name="two_players_button">Two Players</string>
    <string name="updating_categories_message_spinner">Downloading new \"Categories\"&#8230;</string>
    <string name="updating_languages_message_spinner">Downloading new \"Languages\"&#8230;</string>
    

    <!-- Web Service Preference Activity -->
    <string name="http_protocol_summary_setting">HTTP Protocol for packages from Internet</string>
    <string name="http_protocol_title_setting">HTTP Protocol</string>
    <string name="server_port_summary_setting">TCP Port for connections with the Server</string>
    <string name="server_port_title_setting">Server Port</string>
    <string name="server_ip_summary_setting">IP used for connections with the Server</string>
    <string name="server_ip_title_setting">Server IP</string>
    <string name="web_application_context_summary_setting">Web Application Context</string>
    <string name="web_application_context_title_setting">Web Application</string>
    <string name="web_service_context_summary_setting">Web Service Context</string>
    <string name="web_service_context_title_setting">Web Service</string>
    <string name="web_service_preference_activity_title">Web Service Settings</string>

</resources>