<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/background1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.main.MainActivity" >

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo_content_description_image_view"
        android:src="@drawable/ic_launcher" >
    </ImageView>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onSinglePlayerGamge"
        android:text="@string/single_player_button"
        android:textStyle="bold" >
    </Button>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onTwoPlayersGame"
        android:text="@string/two_players_button"
        android:textStyle="bold" >
    </Button>

</LinearLayout>