<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.bluetooth.BluetoothDevicesListActivity" >

    <TextView
        android:id="@+id/paired_devices_text_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/devices_list_background_title_text_view"
        android:paddingLeft="5dp"
        android:text="@string/paired_devices_text_view"
        android:textColor="@color/devices_list_text_color_title_text_view"
        android:visibility="gone" >
    </TextView>

    <ListView
        android:id="@+id/paired_devices_list_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:stackFromBottom="true" >
    </ListView>

    <TextView
        android:id="@+id/new_devices_text_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/devices_list_background_title_text_view"
        android:paddingLeft="5dp"
        android:text="@string/new_devices_text_view"
        android:textColor="@color/devices_list_text_color_title_text_view"
        android:visibility="gone" >
    </TextView>

    <ListView
        android:id="@+id/new_devices_list_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:stackFromBottom="true" >
    </ListView>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onStartScanningDevices"
        android:text="@string/start_scanning_text_button" >
    </Button>

</LinearLayout>